--- a/ekobis/src/App.css
+++ b/ekobis/src/App.css
@@ -3,6 +3,12 @@
   padding: 0;
   text-align: center;
   box-sizing: border-box;
+  p {
+    font-weight: 200;
+  }
+  h1, h2, h3, h4, h5, h6 {
+    font-weight: 500; 
+  }
 }
 
 @keyframes rotate360 {
@@ -13,5 +19,7 @@
     transform: rotate(360deg);
   }
 }
+
+
 
   
