--- a/ekobis/src/index.css
+++ b/ekobis/src/index.css
@@ -1,3 +1,32 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;500&display=swap');
+
+#root {
+  p {
+    font-weight: 200;
+  }
+  
+  
+  h1, h2, h3, h4, h5, h6 {
+    font-weight: 500; 
+  }
+}
+
+
+
+.loader {
+  border: 8px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  border-top: 8px solid #3498db;
+  width: 64px;
+  height: 64px;
+  animation: spin 0.8s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
