--- a/ekobis/src/index.css
+++ b/ekobis/src/index.css
@@ -4,18 +4,17 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;500&display=swap');
 
-#root {
-  p {
-    font-weight: 200;
-  }
-  
-  
-  h1, h2, h3, h4, h5, h6 {
-    font-weight: 500; 
-  }
+body {
+  @apply font-montserrat;
 }
 
+p {
+  @apply font-extralight;
+}
 
+h1, h2, h3, h4, h5, h6 {
+  @apply font-medium;
+}
 
 .loader {
   border: 8px solid rgba(0, 0, 0, 0.1);
